/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

/*
* These ProtoBuf files are part of an experimental interface.
* Use this interface at your own risk.
*/


syntax = "proto3";
package org.apache.geode.internal.protocol.protobuf.v1;

message Entry {
    EncodedValue key = 1;
    EncodedValue value = 2;
}

message EncodedValue {
    oneof value{
        int32 intResult = 1;
        int64 longResult = 2;
        int32 shortResult = 3;
        int32 byteResult = 4;
        bool booleanResult = 5;
        double doubleResult = 6;
        float floatResult = 7;
        bytes binaryResult = 8;
        string stringResult = 9;

        string jsonObjectResult = 10;
    }
}

message Region {
    string name = 1;
    string dataPolicy = 2;
    string scope = 3;
    string keyConstraint = 4;
    string valueConstraint = 5;
    bool persisted = 6;
    int64 size = 7;
}

message Server {
    string hostname = 1;
    int32 port = 2;
}

message Error {
    ErrorCode errorCode = 1;
    string message = 2;
}

message KeyedError {
    EncodedValue key = 1;
    Error error = 2;
}

enum ErrorCode {
    INVALID_ERROR_CODE = 0;
    GENERIC_FAILURE = 1000;
    VALUE_ENCODING_ERROR = 1100;
    UNSUPPORTED_VERSION = 1101;
    UNSUPPORTED_OPERATION = 1102;
    UNSUPPORTED_AUTHENTICATION_MODE = 1103;
    HANDSHAKE_REQUIRED = 1104;
    AUTHENTICATION_FAILED = 1200;
    AUTHORIZATION_FAILED = 1201;
    ALREADY_AUTHENTICATED = 1202;
    AUTHENTICATION_NOT_SUPPORTED = 1203;
    LOW_MEMORY = 1300;
    DATA_UNREACHABLE = 1301;
    OPERATION_TIMEOUT = 1302;
    CONSTRAINT_VIOLATION = 2000;
    BAD_QUERY = 2001;
    REGION_NOT_FOUND = 2100;
    QUERY_PARAMETER_MISMATCH = 2200;
    QUERY_BIND_FAILURE = 2201;
    QUERY_NOT_PERMITTED = 2202;
    QUERY_TIMEOUT = 2203;
}
